# partialdispatch

./: .envrc  .python-version  CHANGELOG.md  LICENSE  Makefile  README.md  example.py  jotter.py  pyproject.toml
.github/workflows/: publish.yml  push-checks.yml  release.yml  tag.yml
src/partialdispatch/: __init__.py  localtypes.py  singledispatch.py
tests/src/partialdispatch/singledispatch/: test_singledispatch_literal.py
tests/stdlib/functools/: test_singledispatch_literals.py  test_stdlib.py
tests/stdlib/inspect/: test_signature.py
tests/stdlib/typing/: test_literal.py
