[project]
name = "partialdispatch"
version = "0.1.2"
description = "Function-level logic inspried by functools.singledispatch"
authors = [
    {name = "Dom Weldon",email = "dom.weldon@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.0.285",
    "isort>=5.12.0",
    "black>=23.7.0",
    "bandit>=1.7.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "pytest-custom-exit-code>=0.3.0",
    "pdm-multirun @ file:///${PROJECT_ROOT}/../pdm-multirun",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
checks = [
    "ruff>=0.0.285",
    "isort>=5.12.0",
    "black>=23.7.0",
    "bandit>=1.7.5",
]
ci = [
    "commitizen>=3.9.0",
]

[tool.commitizen]
update_changelog_on_bump = true
version_provider = "pep621"
major_version_zero = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line_length = 79

[tool.pytest.ini_options]
addopts = "--cov=partialdispatch --cov-append --cov-report html"